# SGEMM-Worklog

./: CMakeLists.txt  README.md  build.sh  compare.py  cublas_sgemm.cuh  cuda_check.cuh  profile.sh  runner.cu  utils.hpp
kernels/: 0-strassen_matmul.cu  1-naive.cuh  10-multi-gpu-sgemm.cuh  2-naive_global_coalesced.cuh  3-shared_mem.cuh  4-shared_mem_1D_blocktiling.cuh  5-shared_mem_2D_blocktiling.cuh  6-shared_mem_2D_blocktiling_coalesced.cuh  7-warptiling_vectorized_loads.cuh  8-hierarchical_warptiling_float4.cuh  9-cutlass-inspired-pingpong-buffering.cuh
